--- a/package.json
+++ b/package.json
@@ -9,11 +9,17 @@
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "react": "^18.2.0",
+    "react-alert": "^7.0.3",
+    "react-alert-template-basic": "^1.0.2",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-rating-stars-component": "^2.2.0",
+    "react-redux": "^9.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
+    "redux": "^4.1.1",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.3.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -39,5 +45,7 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "http://192.168.0.116:4000"
+
 }
