--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-alert-template-basic": "^1.0.2",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-icons": "^4.12.0",
     "react-rating-stars-component": "^2.2.0",
     "react-redux": "^9.0.1",
     "react-router-dom": "^5.2.0",
@@ -47,5 +48,4 @@
     ]
   },
   "proxy": "http://192.168.0.116:4000"
-
 }
